feat: more specialized versions of NativeListView add BoolNativeList and CharNativeList update Gradle to 9.4